--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <!-- ============== RESSOURCES CSS ET JS (Optimisé) ============== -->
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;500;700;800;900&display=swap" rel="stylesheet"> <!-- La balise display=swap est déjà bonne -->
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;500;700;800;900&display=swap" rel="stylesheet"> <!-- La balise display=swap est déjà bonne -->
 
     <!-- Swiper Slider -->
     <link rel="preload" as="style" href="assets/css/swiper-bundle.min.css" onload="this.onload=null;this.rel='stylesheet'">
