--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                                 <img loading="lazy" src="assets/images/consulting/banner-icon3.svg" alt="" width="25" height="35"/>
                             </a>
                         </div>
-                        <a href="#contact" aria-label="nous contacter" class="btn rounded-md bg-white">Contactez-nous</a>
+                        <a href="#contact" class="btn rounded-md bg-white">Contactez-nous</a>
                     </div>
                     <div class="lg:col-span-5 hidden lg:block">
                         <div
@@ -825,54 +825,63 @@
                 height="456"
                 class="absolute inset-0 z-0 h-full w-full object-cover object-center"
             />
+            <div class="absolute inset-0 z-0 h-full w-full bg-black/50"></div>
             <div class="container">
-                <div
-                    class="grid grid-cols-1 gap-12 text-center lg:grid-cols-2 lg:gap-20 ltr:lg:text-left rtl:lg:text-right">
-                    <div>
-                        <h3 class="text-3xl font-black uppercase text-white sm:text-[40px] sm:leading-[50px]">
-                            Réparation <span class="text-primary">PC & Ordinateurs</span> pour Particuliers
-                        </h3>
-                        <p class="mt-[18px] text-lg text-gray-300">
-                            Spécialiste en réparation d'ordinateurs fixes et portables. Nous redonnons vie à votre PC
-                            avec des solutions rapides et durables. Service personnalisé à domicile ou en atelier.
-                        </p>
-                        <ul class="mt-6 space-y-3 text-left">
-                            <li class="flex items-center gap-3">
-                        <span class="flex h-5 w-5 items-center justify-center rounded-full bg-primary">
-                            <svg class="h-3 w-3 text-white" fill="currentColor" viewBox="0 0 20 20">
-                                <path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path>
-                            </svg>
-                        </span>
-                                <span class="text-gray-300">Diagnostic PC gratuit et détaillé</span>
-                            </li>
-                            <li class="flex items-center gap-3">
-                        <span class="flex h-5 w-5 items-center justify-center rounded-full bg-primary">
-                            <svg class="h-3 w-3 text-white" fill="currentColor" viewBox="0 0 20 20">
-                                <path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path>
-                            </svg>
-                        </span>
-                                <span class="text-gray-300">Intervention à domicile possible</span>
-                            </li>
-                            <li class="flex items-center gap-3">
-                        <span class="flex h-5 w-5 items-center justify-center rounded-full bg-primary">
-                            <svg class="h-3 w-3 text-white" fill="currentColor" viewBox="0 0 20 20">
-                                <path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path>
-                            </svg>
-                        </span>
-                                <span class="text-gray-300">Maintenance préventive</span>
-                            </li>
-                        </ul>
-                        <div class="mt-8 flex flex-col sm:flex-row justify-center gap-4 lg:justify-start">
-                            <a
-                                href="#contact"
-                                class="btn rounded-md bg-secondary text-white shadow-[10px_15px_30px_rgba(199,128,161,0.2)] hover:bg-primary transition-all duration-300"
-                            >Contactez-nous</a>
-                            <a
-                                href="#services"
-                                class="btn rounded-md border-2 border-primary text-primary bg-transparent hover:bg-primary hover:text-white transition-all duration-300"
-                            >Nos Services</a>
+                <div class="container relative z-10">
+                    <div
+                        class="grid grid-cols-1 gap-12 text-center lg:grid-cols-2 lg:gap-20 ltr:lg:text-left rtl:lg:text-right">
+                        <div>
+                            <h3 class="text-3xl font-black uppercase text-white sm:text-[40px] sm:leading-[50px]">
+                                Réparation <span class="text-primary">PC & Ordinateurs</span> pour Particuliers
+                            </h3>
+                            <p class="mt-[18px] text-lg text-gray-300">
+                                Spécialiste en réparation d'ordinateurs fixes et portables. Nous redonnons vie à votre
+                                PC
+                                avec des solutions rapides et durables. Service personnalisé à domicile ou en atelier.
+                            </p>
+                            <ul class="mt-6 space-y-3 text-left">
+                                <li class="flex items-center gap-3">
+                                    <span class="flex h-5 w-5 items-center justify-center rounded-full bg-primary">
+                                        <svg class="h-3 w-3 text-white" fill="currentColor" viewBox="0 0 20 20">
+                                            <path fill-rule="evenodd"
+                                                  d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
+                                                  clip-rule="evenodd"></path>
+                                        </svg>
+                                    </span>
+                                    <span class="text-gray-300">Diagnostic PC gratuit et détaillé</span>
+                                </li>
+                                <li class="flex items-center gap-3">
+                                    <span class="flex h-5 w-5 items-center justify-center rounded-full bg-primary">
+                                        <svg class="h-3 w-3 text-white" fill="currentColor" viewBox="0 0 20 20">
+                                            <path fill-rule="evenodd"
+                                                  d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
+                                                  clip-rule="evenodd"></path>
+                                        </svg>
+                                    </span>
+                                    <span class="text-gray-300">Intervention à domicile possible</span>
+                                </li>
+                                <li class="flex items-center gap-3">
+                                <span class="flex h-5 w-5 items-center justify-center rounded-full bg-primary">
+                                    <svg class="h-3 w-3 text-white" fill="currentColor" viewBox="0 0 20 20">
+                                        <path fill-rule="evenodd"
+                                              d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
+                                              clip-rule="evenodd"></path>
+                                    </svg>
+                                </span>
+                                    <span class="text-gray-300">Maintenance préventive</span>
+                                </li>
+                            </ul>
+                            <div class="mt-8 flex flex-col sm:flex-row justify-center gap-4 lg:justify-start">
+                                <a
+                                    href="#contact"
+                                    class="btn rounded-md bg-secondary text-white shadow-[10px_15px_30px_rgba(199,128,161,0.2)] hover:bg-primary transition-all duration-300"
+                                >Contactez-nous</a>
+                                <a
+                                    href="#services"
+                                    class="btn rounded-md border-2 border-primary text-primary bg-transparent hover:bg-primary hover:text-white transition-all duration-300"
+                                >Nos Services</a>
+                            </div>
                         </div>
-                    </div>
                     <div class="grid grid-cols-2 items-center gap-3 sm:gap-7" data-aos="flip-left"
                          data-aos-duration="1000">
                         <div
