repair faq and counter vanilla js

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                 class="absolute inset-0 w-full h-full object-cover"
             >
             <!-- Container pour les particules -->
-            <div id="tsparticles" class="absolute inset-0 z-50"></div>
+            <div id="tsparticles" class="absolute inset-0 z-0"></div>
 
 
             <div class="container">
@@ -660,7 +660,7 @@
                         <img loading="lazy" src="./src/assets/images/consulting01/question-img.webp" class="rtl:rotate-y-180" alt="" width="552" height="485"/>
                     </div>
                     <div class="accordion-container flex-1">
-                        <div class="ac mt-5 border-none bg-transparent">
+                        <div class="ac mt-5 border border-gray-200 bg-white dark:bg-gray-800">
                             <h2 class="ac-header rounded-t-md">
                                 <button
                                     type="button" aria-label="action button"
@@ -685,7 +685,7 @@
                                 </button>
                             </h2>
                             <div class="ac-panel">
-                                <p class="ac-text bg-white !p-5 !font-mulish !text-base !font-medium !text-gray dark:!bg-white/5">
+                                <p class="ac-text bg-white !p-5 !font-mulish !text-sm !font-bold !leading-[18px] !text-gray dark:!bg-white/5">
                                     Je propose principalement des services logiciels : diagnostic gratuit,
                                     réinstallation de Windows, optimisation des PC lents, nettoyage des virus et
                                     logiciels malveillants, ainsi que des conseils pour améliorer les performances de
@@ -693,7 +693,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="ac mt-5 border-none bg-transparent">
+                        <div class="ac mt-5 border border-gray-200 bg-white dark:bg-gray-800">
                             <h2 class="ac-header rounded-t-md">
                                 <button
                                     type="button" aria-label="action button"
@@ -726,7 +726,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="ac mt-5 border-none bg-transparent">
+                        <div class="ac mt-5 border border-gray-200 bg-white dark:bg-gray-800">
                             <h2 class="ac-header rounded-t-md">
                                 <button
                                     type="button" aria-label="action button"
@@ -758,7 +758,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="ac mt-5 border-none bg-transparent">
+                        <div class="ac mt-5 border border-gray-200 bg-white dark:bg-gray-800">
                             <h2 class="ac-header rounded-t-md">
                                 <button
                                     type="button" aria-label="action button"
